<resources>
    <string name="default_string">They H Name</string>
    <string name="default_image_button_string">Default Description String For Image Button</string>
    <string name="something_went_wrong">Oops ! Something went wrong. Please try again later.</string>
    <string name="check_internet">Check your internet Connection.</string>
    <string name="profile_compulsory">You Need To Fill Your Profile Compulsory</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_text1">Let\'s Find Your SoulMate</string>
    <string name="label_login">Login</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_new_user">New User?&#160;</string>
    <string name="label_existing_user">Existing user?&#160;</string>
    <string name="label_login_here">LOGIN&#160;</string>
    <string name="label_forgot_password">Forgot Password?&#160;</string>
    <string name="label_sign_up">SIGNUP</string>
    <string name="enter_valid_email">Enter Valid Email ID</string>
    <string name="enter_valid_phone">Enter Valid Phone Number</string>
    <string name="enter_valid_password">Enter valid Password</string>
    <string name="enter_valid_username_or_password">Username or password does not match.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content_description_image_view">Navigation menu image</string>
    <string name="nav_home">Home</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_user_name">Profile name</string>
    <string name="label_current_password">Current password</string>
    <string name="label_new_password">New password</string>
    <string name="label_enter_otp">Enter OTP</string>
    <string name="label_registration">Registration</string>
    <string name="label_first_name">First Name</string>
    <string name="label_middle_name">Middle Name (Optional)</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email">Email</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_button_register">Register</string>
    <string name="enter_valid_fname">Enter Valid First Name</string>
    <string name="enter_valid_lname">Enter valid Last Name</string>
    <string name="toggle_description">Show/Hide Password</string>
    <string name="enter_same_password">Password does not match</string>
    <string name="signup_privacy_policy">
        By using this App, you agree to the Terms-Conditions and Privacy-Policy and consent to having your personal data, behavior processed.
    </string>
    <string name="signup_privacy">
        <u>Privacy-Policy</u>
    </string>
    <string name="signup_terms">
        <u>Terms-Conditions</u>
    </string>
    <string name="doublebackpress">Press back once again to exit!</string>
    <string name="developed_by">Developed By kloudforj</string>
    <string name="user_profile_save">Save</string>
    <string name="user_profile_upload_image">Image is uploading. Please wait.</string>
    <string name="phone_verify">You will get SMS with a Verification Code to this number.</string>
    <string name="email_verify">You will get EMail with a Verification Code to this Email ID.</string>
    <string name="user_profile_private_profile">Private Profile</string>
    <string name="user_profile_card_title_basic_info">Basic Info</string>
    <string name="user_profile_name">Name</string>
    <string name="user_profile_first_name">First Name</string>
    <string name="user_profile_middle_name">Middle Name</string>
    <string name="user_profile_last_name">Last Name</string>
    <string name="user_profile_date_of_birth">Date Of Birth</string>
    <string name="user_profile_birthdate">29 &#8211; 02 &#8211; 1995</string>
    <string name="user_profile_birthtime">23:56</string>
    <string name="user_profile_gender">Gender</string>
    <string name="user_profile_gender_female">Female</string>
    <string name="user_profile_gender_male">Male</string>
    <string name="user_profile_phone_number">Phone Number</string>
    <string name="user_profile_number">9898989898</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_default_email_address">xyz@gmail.com</string>
    <string name="user_profile_marital_status">Marital Status</string>
    <string name="user_profile_default_marital_status">Single / Never Married</string>
    <string name="user_profile_caste">Caste</string>
    <string name="user_profile_sub_caste_1">Sub Caste 1</string>
    <string name="user_profile_sub_caste_2">Sub Caste 2</string>
    <string name="user_profile_card_title_extra_info">Extra Info</string>
    <string name="user_profile_height">Height</string>
    <string name="user_profile_default_height">5\'10</string>
    <string name="user_profile_weight">Weight</string>
    <string name="user_profile_default_weight">80</string>
    <string name="user_profile_birth_place">Birth Place</string>
    <string name="user_profile_default_birth_place">Surat</string>
    <string name="user_profile_birth_time">Birth Time</string>
    <string name="user_profile_default_birth_time">09:30 AM</string>
    <string name="user_profile_hobbies">Hobbies</string>
    <string name="user_profile_default_hobbies">Swimming, playing tennis, cooking are my favorite hobbies</string>
    <string name="user_profile_about_me">About Me</string>
    <string name="user_profile_address">Lorem ipsum for the dummy address</string>
    <string name="user_profile_card_title_education">Education Details</string>
    <string name="user_profile_education">Education</string>
    <string name="user_profile_default_education">10th\n12th\nB.Sc Computer Science</string>
    <string name="user_profile_current_job">Current Job</string>
    <string name="user_profile_default_current_job">Sr. Software Developer</string>
    <string name="user_profile_income">Income</string>
    <string name="user_profile_default_income">$ 25,000</string>
    <string name="user_profile_card_title_family_details">Family Details</string>
    <string name="user_profile_father">Father</string>
    <string name="user_profile_fathers_name">Father Name</string>
    <string name="user_profile_default_fathers_name">Nandkishor Tagariwala</string>
    <string name="user_profile_fathers_education">Father Education</string>
    <string name="user_profile_default_fathers_education">10th</string>
    <string name="user_profile_fathers_profession">Father Profession</string>
    <string name="user_profile_default_fathers_profession">Business Man</string>
    <string name="user_profile_fathers_birth_place">Father Birth Place</string>
    <string name="user_profile_default_fathers_birth_place">Surat</string>
    <string name="user_profile_mother">Mother</string>
    <string name="user_profile_mothers_name">Mother Name</string>
    <string name="user_profile_default_mothers_name">Meena Tagariwala</string>
    <string name="user_profile_mothers_education">Mother Education</string>
    <string name="user_profile_default_mothers_education">10th</string>
    <string name="user_profile_mothers_profession">Mother Profession</string>
    <string name="user_profile_default_mothers_profession">Housewife</string>
    <string name="user_profile_mothers_birth_place">Mother Birth Place</string>
    <string name="user_profile_default_mothers_birth_place">Surat</string>
    <string name="user_profile_card_title_address_details">Address Details</string>
    <string name="user_profile_address1">Address 1</string>
    <string name="user_profile_address2">Address 2</string>
    <string name="user_profile_address3">Address 3</string>
    <string name="user_profile_country">Country</string>
    <string name="user_profile_state">State</string>
    <string name="user_profile_city">City</string>
    <string name="user_profile_pincode">Pincode</string>
    <string name="user_profile_location">Location</string>
    <string name="user_profile_default_location">Surat, Gujarat, India</string>
    <string name="search_user">Search</string>
    <string name="search_name">Name</string>
    <string name="search_year">Year</string>
    <string name="search_caste">Caste</string>
    <string name="search_sub_caste_1">Sub Caste 1</string>
    <string name="search_sub_caste_2">Sub Caste 2</string>
    <string name="search_country">Country</string>
    <string name="search_state">State</string>
    <string name="search_city">City</string>
    <string name="search_find">Find</string>
    <string name="search_location">Location</string>
    <string name="app_name">Celebration Matchmaker</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string-array name="caste">
        <item>caste 1</item>
        <item>caste 2</item>
    </string-array>
    <string-array name="sub_caste_1">
        <item>sub caste 11</item>
        <item>sub caste 12</item>
    </string-array>
    <string-array name="sub_caste_2">
        <item>sub caste 21</item>
        <item>sub caste 22</item>
    </string-array>
    <string-array name="country">
        <item>Country 1</item>
        <item>Country 2</item>
    </string-array>
    <string-array name="state">
        <item>state 1</item>
        <item>state 2</item>
    </string-array>
    <string-array name="city">
        <item>city 1</item>
        <item>city 2</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="marital_status">
        <item>Single</item>
        <item>Divorced</item>
        <item>Widow</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name_empty">Enter Your First Name</string>
    <string name="middle_name_empty">Enter Your Middle Name</string>
    <string name="last_name_empty">Enter Your Last Name</string>
    <string name="birth_date_empty">Select Your Birth Date</string>
    <string name="birth_date_male">You Must Be Above 21 To Fill Up The Profile</string>
    <string name="birth_date_female">You Must Be Above 18 To Fill Up The Profile</string>
    <string name="phone_number_empty">Enter Your Phone Number</string>
    <string name="email_empty">Enter Your Email</string>
    <string name="about_us_title">About Us</string>
    <string name="about_us_first">To arrange happy everlasting married life is what we have believed in from the past 7 years of experience.</string>
    <string name="about_us_second">Achievement: We arranged one get togather on large scale, with details of each candidate for them to know each other well enough for the everlasting married life to start.</string>
    <string name="about_us_reach_us">Reach Us</string>
    <string name="about_us_email">celebrationmatchmakersurat@gmail.com</string>
    <string name="about_us_name_1">Parul Marfatia</string>
    <string name="about_us_address_1">42, Sangam society, opposite Science Center, city light road, Surat - 395007</string>
    <string name="about_us_phone_1">+919825119752</string>
    <string name="about_us_name_2">Gayatri Lokhandwala</string>
    <string name="about_us_address_2">A - 701, Bejanwala complex, opposite S.M.C Zone office, Tarwadi, Rander Road, Surat - 395009</string>
    <string name="about_us_phone_2">+917990972333</string>
</resources>