<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/nav_home" />

        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:title="@string/nav_settings"-->
            <!--android:icon="@drawable/ic_settings" />-->

        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/nav_contact_us"
            android:icon="@drawable/nav_contact_us" />

        <item
            android:id="@+id/nav_change_password"
            android:title="@string/nav_change_password"
            android:icon="@drawable/nav_change_password" />

        <item
            android:id="@+id/nav_log_out"
            android:title="@string/nav_logout"
            android:icon="@drawable/nav_logout" />

    </group>

</menu>