<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.AboutUsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">

            <ImageView
                android:id="@+id/companyLogo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/celeb_match" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="3dp"
                        android:background="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_first"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_second"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_reach_us"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="3dp"
                        android:background="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_email"
                            android:text="@string/about_us_email"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_name_1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_address_1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/tv_phone_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_phone_1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_name_2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_address_2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/tv_phone_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_us_phone_2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>