<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="29dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imagebutton_cpa_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/default_image_button_string"
                    android:src="@drawable/ic_close_white"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_search_toolbar_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearlayout_changepassowrd_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/currentPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.White.Hint"
                app:passwordToggleContentDescription="@string/toggle_description"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryLight">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/label_current_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_10"
                    android:theme="@style/EditText.White" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.White.Hint"
                app:passwordToggleContentDescription="@string/toggle_description"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryLight">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/label_new_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_10"
                    android:theme="@style/EditText.White" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.White.Hint"
                app:passwordToggleContentDescription="@string/toggle_description"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryLight">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/label_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_10"
                    android:theme="@style/EditText.White" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <Button
                android:id="@+id/change_password_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_border_button"
                android:text="@string/nav_change_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>